# bm-complete

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  flake.nix
module/: bm-complete.zsh
src/: cache.rs  completions.rs  config.rs  daemon.rs  engine.rs  error.rs  lib.rs  main.rs  source.rs  store.rs  testing.rs
src/completions/: mod.rs  path.rs
tests/: cli.rs
