[package]
name = "pleme-bm-complete"
version = "0.1.0"
edition = "2021"
description = "Completion daemon — fast, cached shell completions via Unix socket"
license = "MIT"
authors = ["Pleme Team <team@pleme.io>"]
repository = "https://github.com/pleme-io/bm-complete"
homepage = "https://github.com/pleme-io/bm-complete"
keywords = ["shell", "completion", "daemon", "zsh"]
categories = ["command-line-utilities"]
exclude = ["module/", "target/", "result-*", "Cargo.nix", "flake.nix", "flake.lock"]

[[bin]]
name = "bm-complete"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
figment = { version = "0.10", features = ["yaml", "env"] }
tokio = { version = "1.40", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tree-sitter = "0.25"
tree-sitter-bash = "0.23"
dirs = "6.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
