[package]
name = "pleme-bm-complete"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Completion daemon — fast, cached shell completions via Unix socket"
license = "MIT"
authors = ["Pleme Team <team@pleme.io>"]
repository = "https://github.com/pleme-io/bm-complete"
homepage = "https://github.com/pleme-io/bm-complete"
keywords = ["shell", "completion", "daemon", "zsh"]
categories = ["command-line-utilities"]
exclude = ["module/", "target/", "result-*", "Cargo.nix", "flake.nix", "flake.lock"]

[[bin]]
name = "bm-complete"
path = "src/main.rs"

[lib]
name = "bm_complete"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
figment = { version = "0.10", features = ["yaml", "env"] }
tokio = { version = "1.40", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tree-sitter = "0.25"
tree-sitter-bash = "0.23"
dirs = "6.0"
hayai = { git = "https://github.com/pleme-io/hayai" }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1.4.1"

[lints.clippy]
pedantic = "warn"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
